Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.4.7.15: Jan 28, 2008

* fix docutils-0.5 incompatibility in build_api_docs.py

* python issue 4230 makes __getattr__ support descriptor protocol.
  This unfortunately causes part of config handling to go boom- fixed.

* copy HOMEPAGE into vdb/binpkg by default.


pkgcore 0.4.7.14: Dec 18, 2008

* profile awareness of eapi files, *including* strict validation.

* tighter use dep and atom support in pkgcore for specified eapis.

* ticket 187; fix a traceback when a specific subset of cycles are
  encountered.

* correct a python 2.6 incompatibility; object.__init__() is now strict
  about taking no keywords.


pkgcore 0.4.7.13: Oct 29, 2008

* bug fix for transitive use atoms; if || ( a/b[x?] ), DepSet wasn't detecting
  that there were conditionals w/in it, as such wasn't doing evaluation.


pkgcore 0.4.7.12: Oct 10, 2008 (2 hours after 0.4.7.11 ;)

* security fix; force cwd to something controlled for ebuild env.  This
  blocks an attack detailed in glsa 200810-02; namely that an ebuild invoking
  python -c (which looks in cwd for modules to load) allows for an attacker
  to slip something in.


pkgcore 0.4.7.11: Oct 10, 2008

* fix EAPI2 issues: default related primarily, invoke src_prepare for
  >=EAPI2 instead of >EAPI2.


pkgcore 0.4.7.10: Oct 7, 2008

* fix in setup.py to install eapi/* files.
  die distutils, die.

* api for depset inspection for tristate (pcheck visibility mode) is fixed
  to not tell the consumer to lovingly 'die in a fire'.

* correct a failure in EAPI=2 src_uri parsing complaining about
  missing checksums for nonexistant files


pkgcore 0.4.7.9: Oct 6, 2008

* eapi2 is now supported.

* DepSet has grown a temp option named allow_src_uri_file_names; this
  is to support eapi 2's -> SRC_URI extension.  This functionality
  will under go refactoring in the coming days- as such the api addition